--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 # ignore recipe dataset, filesize too large
 data/20170107-061401-recipeitems.json
 data/FremontBridge.csv
+
+4-matplotlib/.ipynb_checkpoints/*
